<resources>
    <string name="app_name">School</string>
    <string name="title_activity_mane2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer.profile">Профиль</string>
    <string name="drawer.contacts">Контакты</string>
    <string name="drawer_tasks">Задачи</string>
    <string name="drawer_team">Команда</string>
    <string name="drawer_setting">Настройки</string>
    <string name="fragments.contacts.description">Здесь будут контакты!</string>
    <string name="fragments.profile.description">Здесь будет профиль</string>
    <string name="fragments.settings.description">Здесь будут настройки!</string>
    <string name="fragments.tasks.description">Здесь будут задачи!</string>
    <string name="fragments.team.description">Здесь будет команда!</string>
    <string name="header_rotation">100</string>
    <string name="header_name_man">Андрей Степанов</string>
    <string name="header_email">stepanov.sub@gmail.com</string>


</resources>
