<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_profile"
        android:checked="true"
        android:title="@string/drawer.profile"
        android:icon="@drawable/ic_assignment_ind_24dp"/>
    <item
        android:id="@+id/drawer_contacts"
        android:title="@string/drawer.contacts"
        android:icon="@drawable/ic_people_black_24dp"/>
    <item
        android:id="@+id/drawer_team"
        android:title="@string/drawer_team"
        android:icon="@drawable/ic_group_work_black_24dp"/>
    <item
        android:id="@+id/drawer_tasks"
        android:title="@string/drawer_tasks"
        android:icon="@drawable/ic_assignment_black_24dp"/>
    <item
        android:id="@+id/drawer_setting"
        android:title="@string/drawer_setting"
        android:icon="@drawable/ic_settings_black_24dp"/>



</menu>