<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_vertical_spacing"
    android:background="@drawable/nav_header_background_img">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/header_profile_image"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/rait_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/rait_view"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_rait"
        android:gravity="center"
        android:text="@string/header_rotation"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignLeft="@+id/header_profile_image"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/header_profile_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/header_text_user_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/header_name_man"
            android:textColor="#DE000000" />

        <TextView
            android:id="@+id/header_text_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/nav_header_margin_bottom"
            android:text="@string/header_email"
            android:textColor="#DE000000" />

    </RelativeLayout>


</RelativeLayout>